@@ -11,13 +11,13 @@ SECTIONS
 		 * For our nasty ELF indirect function hack.  These should
 		 * have no real effect if the hack is not used.
 		 */
-		*(.rel.plt)
+		*(.rel.bss)
 		*(.rel.iplt)
 		PROVIDE_HIDDEN(__rel_iplt_start =
 		    DEFINED(__rel_iplt_start) ? __rel_iplt_start : .);
 		PROVIDE_HIDDEN(__rel_iplt_end =
 		    DEFINED(__rel_iplt_end) ? __rel_iplt_end : .);
-		*(.rela.plt)
+		*(.rela.bss)
 		*(.rela.iplt)
 		PROVIDE_HIDDEN(__rela_iplt_start =
 		    DEFINED(__rela_iplt_start) ? __rela_iplt_start : .);
